got help making the page response. Code works fine.

--- a/index.html
+++ b/index.html
@@ -131,22 +131,22 @@
         
         </div> <br>
 
+        <div id="scoreBoard">
+            <p id="correct">
+                Correct:
+            </p>
+            <p id="incorrect">
+                incorrect:
+            </p>
+            <p id="unanswered">
+                Unanswered:
+            </p> <br>
+        </div>
+
 
 
 
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
 
     <script src="assets/javascript/app.js"></script>
 </body>
