fixed border below start button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div >
 
-            <button id="start"> Start Game! </button>
+            <button id="start"> Start Game! </button> <br><br>
         
         </div>
 
